--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,9 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                echo 'Building..'
+                cd /var/lib/jenkins/workspace/pipeline@script/sample.sh
+                chmod 754 sample.sh
+                ./sample.sh
             }
         }
         stage('Test') {
