--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,9 +4,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                
-                chmod 754 sample.sh
-                ./sample.sh
+              .\sample.sh
             }
         }
         stage('Test') {
