--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,6 +4,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
+             cd /var/lib/jenkins/workspace/pipeline@script/
               .\sample.sh
             }
         }
