--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         stage('Build') {
             steps {
              cd /var/lib/jenkins/workspace/pipeline
-              .\sample.sh
+              ./sample.sh
             }
         }
         stage('Test') {
