--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,10 @@
-import groovy.json.JsonSlurper 
 pipeline {
+    agent any
     stages {
         stage('Build') {
             steps {
-             cd /var/lib/jenkins/workspace/pipeline
-              ./sample.sh
+              
+			    echo 'sdfjbsdf'
             }
         }
         stage('Test') {
