--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,10 @@
 pipeline {
     agent any
+
     stages {
         stage('Build') {
             steps {
-              
-	         echo 'sdfjbsdf'
+                echo 'Building..'
             }
         }
         stage('Test') {
