--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                cd /var/lib/jenkins/workspace/pipeline@script
+                cd /var/lib/jenkins/workspace/pipeline
                 ./sample.sh
             }
         }
